src/objects/DataInformationRequest__c.object
<CustomObject>
    <description>Request made for Information to Data source analysis by the Enterprise Data Engineer.</description>
    <fields>
        <fullName>BAContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The business analyst that will be worked with during the information analysis.</description>
        <inlineHelpText>The business analyst that will be worked with during the information analysis.</inlineHelpText>
        <label>BA Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataInformationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DevelopmentContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The developer that will be referenced during this information analysis.</description>
        <inlineHelpText>The developer that will be referenced during this information analysis.</inlineHelpText>
        <label>Development Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataInformationContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DevelopmentStartDate__c</fullName>
        <description>The planned date if any that development will need to begin utilizing information in this request.</description>
        <inlineHelpText>The planned date if any that development will need to begin utilizing information in this request.</inlineHelpText>
        <label>Development Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InformationDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The final definition associated with this request. May not match completely the original request.</description>
        <inlineHelpText>The final definition associated with this request. May not match completely the original request.</inlineHelpText>
        <label>Information Definition</label>
        <referenceTo>DataInformation__c</referenceTo>
        <relationshipLabel>Data Information Requests</relationshipLabel>
        <relationshipName>DataInformationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InformationOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person at WGU that has total authority to define the information.</description>
        <inlineHelpText>The person at WGU that has total authority to define the information.</inlineHelpText>
        <label>Information Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataInformationRequestOwners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InformationSteward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who has authority in WGU to act on behalf of the Information Owner.</description>
        <inlineHelpText>The person who has authority in WGU to act on behalf of the Information Owner.</inlineHelpText>
        <label>Information Steward</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataInformationRequestSteward</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IterationZeroFinalizeDate__c</fullName>
        <description>The date that iteration zero will need to be finalized within the BA group.</description>
        <inlineHelpText>The date that iteration zero will need to be finalized within the BA group.</inlineHelpText>
        <label>Iteration Zero Finalize Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPhase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project phase this request is associated with.</description>
        <label>Project Phase</label>
        <referenceTo>ProjectPhase__c</referenceTo>
        <relationshipLabel>Data Information Requests</relationshipLabel>
        <relationshipName>DataInformationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The inception project that this information request is related.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Information Requests</relationshipLabel>
        <relationshipName>DataInformationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestDetails__c</fullName>
        <label>Request Details</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RequestStatus__c</fullName>
        <description>Designates the status of the information request.</description>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Assignment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who is entering this request and is the starting point but not always the long term owner of the information analysis.</description>
        <inlineHelpText>The person who is entering this request and is the starting point but not always the long term owner of the information analysis.</inlineHelpText>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataInformationRequester</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Information Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Active</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>RequestStatus__c</columns>
        <columns>IterationZeroFinalizeDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RequestStatus__c</field>
            <operation>equals</operation>
            <value>Assigned,Started,In Progress,On Hold,Awaiting Feedback</value>
        </filters>
        <label>My Active</label>
    </listViews>
    <listViews>
        <fullName>My_Done</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>ProjectPhase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Joseph</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Lindley</value>
        </filters>
        <filters>
            <field>RequestStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>My Done</label>
    </listViews>
    <listViews>
        <fullName>Needs_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>IterationZeroFinalizeDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RequestStatus__c</field>
            <operation>equals</operation>
            <value>Needs Assignment</value>
        </filters>
        <label>Needs Assignment</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Information Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>